# RoadSign

./: .gitignore  Cargo.toml  Dockerfile  README.md  Settings.toml  go.mod  go.sum  settings.toml  settings.yml
.fleet/: run.json
.gitea/workflows/: nightly.yml
.github/workflows/: nightly.yml
certs/: fullchain.pem  privkey.pem
cli/: .gitignore  .roadsignrc  README.md  bun.lockb  index.ts  package.json  rollup.config.js  tsconfig.json
cli/src/cmd/: deploy.ts  info.ts  list.ts  login.ts  logout.ts  process-info.ts  reload.ts  status.ts  sync.ts
cli/src/utils/: auth.ts  config-local.ts  config.ts
cli/test/: static-files.toml
cli/test/static-files/: index.html
config/: example.json  example.toml
pkg/: meta.go
pkg/administration/: connectivity.go  init.go  publish.go  server.go  sites.go
pkg/cmd/: main.go
pkg/cmd/cli/: main.go
pkg/cmd/rdc/: main.go
pkg/cmd/rds/: main.go
pkg/cmd/server/: main.go
pkg/configurator/: deserializer.go  main.go  router.go  struct.go  transformer.go  upstream.go
pkg/filesystem/: zip.go
pkg/fs/: zip.go
pkg/hypertext/: init.go  proxies.go  server.go
pkg/hypertext/status/: embed.go  serve.go
pkg/navi/: config.go  configurator.go  helmet.go  logging.go  metrics.go  responder.go  route.go  struct.go  upstream.go  warden.go
pkg/navi/transformers/: compress.go  module.go  replace_path.go
pkg/sideload/: applications.go  connectivity.go  metadata.go  metrics.go  processes.go  publish.go  regions.go  reload.go  server.go  sites.go  statistics.go
pkg/sideload/view/: .dockerignore  .gitignore  README.md  embed.go  index.html  package.json  tailwind.config.js  unocss.config.ts  vite.config.ts
pkg/sign/: configurator.go  deserializer.go  pm.go  responder.go  router.go  transformer.go  upstream.go
pkg/sign/transformers/: compress.go  module.go  replace_path.go
pkg/warden/: executor.go  manifest.go
regions/: index.html  index.toml  kokodayo.txt  script.sh
regions/subfolder/: index.html
src/: auth.rs  main.rs  server.rs  tls.rs
src/config/: loader.rs  mod.rs
src/proxies/: browser.rs  config.rs  loader.rs  metrics.rs  mod.rs  responder.rs  route.rs  server.rs
src/sideload/: mod.rs  overview.rs  regions.rs  server.rs
src/warden/: mod.rs  runner.rs
test/: README.md
test/benchmark/: README.md
test/benchmark/data/: .gitignore  index.html
test/benchmark/roadsign-spa/: settings.yml
test/data/: .gitignore
test/data/sse/: index.html  (+1 more)
test/nginx/: nginx.conf
test/roadsign/: settings.toml
test/roadsign-ssr/: settings.toml  settings.yml
test/roadsign-with-prefork/: settings.toml  settings.yml
(+43 files in other folders)
